@@ -2,3 +2,32 @@
 
 zorathos-data-receiver是中台的数据接收器，基于zorathos-data-model构建
 data-receiver-human-machine
+
+### 运行指南
+TBD
+
+### contributing
+TBD
+
+
+```shell
+--add-exports=java.base/sun.net.util=ALL-UNNAMED 
+--add-exports=java.rmi/sun.rmi.registry=ALL-UNNAMED 
+--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED 
+--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED 
+--add-exports=jdk.compiler/com.sun.tools.javac.pa.javac.tree=ALL-UNNAMED
+--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED 
+--add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED 
+--add-opens=java.base/java.lang=ALL-UNNAMED 
+--add-opens=java.base/java.net=ALL-UNNAMED 
+--add-opens=java.base/java.io=ALL-UNNAMED 
+--add-opens=java.base/java.nio=ALL-UNNAMED 
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED 
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED 
+--add-opens=java.base/java.text=ALL-UNNAMED 
+--add-opens=java.base/java.time=ALL-UNNAMED 
+--add-opens=java.base/java.util=ALL-UNNAMED 
+--add-opens=java.base/java.util.concurrent=ALL-UNNAMED 
+--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED 
+--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+```
